// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage should show component with image 1`] = `
<img
  alt="Product"
  className="productImg undefined"
  src="https://hola.jpg"
/>
`;

exports[`ProductImage should show component with product image 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Product"
    className="productImg undefined"
    src="test-file-stub"
  />
</div>
`;
